--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,7 +28,7 @@
 
         <div id="form">
             <form action="/login" method="post">
-                <input type="email" name="username" placeholder="Email Address" class="form-element" autocomplete="off">
+                <input type="text" name="username" placeholder="Username" class="form-element" autocomplete="off">
                 <br>
                 <input type="password" name="password" placeholder="Password" class="form-element">
                 <br>
