--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -28,7 +28,9 @@
 
         <div id="form">
             <form action="/signup" method="post">
-                <input type="email" name="username" placeholder="Email Address" class="form-element" autocomplete="off">
+                <input type="email" name="email" placeholder="Email Address" class="form-element" autocomplete="off">
+                <br>
+                <input type="text" name="username" placeholder="Username" class="form-element" autocomplete="off">
                 <br>
                 <input type="password" name="password" placeholder="Password" class="form-element">
                 <br>
