--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,6 +12,9 @@
         <p>
             <%=post.content.substring(0,250)+" ..."%>
                 <a href="/posts/<%=post._id%>">Read More</a>
+                <!-- <p>
+                    <%=post._id%>
+                </p> -->
         </p>
         <% })%>
             <%- include("partials/footer")-%>
