--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,29 @@
 <%- include("partials/header") -%>
-    <h1>About</h1>
-    <p>
-        <%=aboutContent%>
+    <h1>About Us</h1>
+    <p style="font-size: 20px;">
+        We look forward to eradicate the taboo surrounding menstruation through open conversation, education and
+        increasing access to basic necessities. Our page offers open discussion to all topics related to Female Health
+        and Hygiene. You could Sign In and talk while revealing your identity or talk anonymously.
+        WomenXP is confronting taboos around periods and calling for #noshame in periods while highlighting the issues
+        faced by the one in three women worldwide who do not have access to a toilet during their period. Many girls
+        miss class and drop out of school due to a lack of toilets at school in developing countries.
+        A survey conducted by WaterAid shows that hiding tampons up your sleeve or taking your whole bag into the toilet
+        at work is probably common as 65% of women say they would feel uncomfortable carrying sanitary products openly
+        to the toilet. And whilst younger generations may have shed other hang-ups of their parents, they are still as
+        coy about toting tampons or towels with 63% of 18 – 24 year olds saying they would feel uncomfortable compared
+        with 65% of 45 – 54 year olds. Nearly nine in ten (87%) women would feel uncomfortable putting a sanitary
+        product on the table in a work meeting. In fact, women feel so uncomfortable about periods, that 62% would
+        rather attend a formal occasion with a large coffee stain on themselves than carry a sanitary product.
+        Nearly half of women (47%) would feel uncomfortable talking to their dad about period pain, and 49% wouldn’t
+        feel comfortable confiding in them about premenstrual tension (PMT). The younger generation is slightly less
+        embarrassed about confiding in their fathers, with 40% 18 – 24 year-olds saying they would feel uncomfortable
+        talking with them about period pain compared with 48% of 45 – 54 year-olds. All this leads to lack of awareness
+        and a major gap in education among teenagers.
+        We at WomenXP decided to develop a unique Website where women, anonymously or signed could create their own
+        blogs, posts or articles. They could also ask questions and answer other’s questions too! When the questions
+        seem to be beyond scope, the site offers some phone numbers of medical professionals for medical help.
+        We are here to be your best companion!
+
     </p>
 
     <%- include("partials/footer") -%>
