--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,14 +12,14 @@
 
 <body style="min-height: 100vh;">
     <div class="signup-main">
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-default" style="background-color: #ecc9c7;">
             <div class="container">
                 <div class="navbar-header">
-                    <p class="navbar-brand"><a href="/">DAILY JOURNAL</a></p>
+                    <img src="/images/logo2.png" alt="Logo" style="width: 100px;height: auto;">
                 </div>
                 <ul class="nav navbar-nav navbar-right">
                     <!-- 6 -->
-                    <li id="about"><a href="/about">ABOUT US</a></li>
+                    <li id="about"><a href="/about" style="color:#000;margin-top: 2rem;">ABOUT US</a></li>
                 </ul>
             </div>
         </nav>
