--- a/views/root.ejs
+++ b/views/root.ejs
@@ -11,20 +11,20 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
-        <div class="container">
+    <nav class="navbar navbar-default" style="background-color: #ecc9c7;">
+        <div class=" container">
             <div class="navbar-header">
-                <p class="navbar-brand"><a href="/">DAILY JOURNAL</a></p>
+                <img src="/images/logo2.png" alt="Logo" style="width: 100px;height: auto;">
             </div>
             <ul class="nav navbar-nav navbar-right">
                 <!-- 6 -->
 
-                <li id="about"><a href="/about">ABOUT US</a></li>
+                <li id="about"><a href="/about" style="color:#000;margin-top: 2rem;">ABOUT US</a></li>
 
             </ul>
         </div>
     </nav>
-    <a href="/signup" class="home-button">SIGN UP / LOGIN</a>
+    <a href="/signup" class="home-button" style="text-decoration: none;">SIGN UP / LOGIN</a>
 </body>
 
 </html>
