--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,23 +3,26 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Daily Journal</title>
-  <meta charset="utf-8">
+
+  <title>WomenXP</title>
+  <script src="https://kit.fontawesome.com/5c86ce5409.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Work+Sans:ital,wght@1,200&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="/css/styles.css">
-  <nav class="navbar navbar-default">
+
+  <nav class="navbar navbar-default" style="background-color: #ecc9c7;">
     <div class="container">
-      <div class="navbar-header">
-        <p class="navbar-brand">DAILY JOURNAL</p>
-      </div>
-      <ul class="nav navbar-nav navbar-right">
+      <img src="/images/logo2.png" alt="Logo" style="width: 100px;height: auto;">
+      <ul class="nav navbar-nav navbar-right" style="background-color:#ecc9c7; ;">
         <!-- 6 -->
-        <li id="home"><a href="/home">HOME</a></li>
-        <li id="about"><a href="/about">ABOUT US</a></li>
-        <li id="compose"><a href="/compose">COMPOSE</a></li>
+        <li id="home"><a href="/home" style="color:#000;margin-top:2rem;">HOME</a></li>
+        <li id="about"><a href="/about" style="color:#000;margin-top:2rem;">ABOUT US</a></li>
+        <li id="compose"><a href="/compose" style="color:#000;margin-top:2rem;">COMPOSE</a></li>
       </ul>
     </div>
   </nav>
 
 <body>
-  <div class="container">
+  <div class="container" style="background-color: #ecc9c7;border-radius:0.7rem;">
