--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,12 +1,12 @@
 <%- include("partials/header")-%>
 
-    <h1>
+    <h3>
         <%=title%>
-    </h1>
+    </h3>
 
-    <p>
+    <p style="font-size: 16px;">
         <%=content%>
     </p>
-
+    <br>
 
     <%- include("partials/footer")-%>
