--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,6 +20,7 @@
         <li id="home"><a href="/home" style="color:#000;margin-top:2rem;">HOME</a></li>
         <li id="about"><a href="/about" style="color:#000;margin-top:2rem;">ABOUT US</a></li>
         <li id="compose"><a href="/compose" style="color:#000;margin-top:2rem;">COMPOSE</a></li>
+        <li id="getExpertHelp"><a href="/getexperthelp" style="color:#000;margin-top:2rem;">GET EXPERT HELP</a></li>
       </ul>
     </div>
   </nav>
