--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,12 +15,8 @@
         <nav class="navbar navbar-default" style="background-color: #ecc9c7;">
             <div class="container">
                 <div class="navbar-header">
-                    <img src="/images/logo2.png" alt="Logo" style="width: 100px;height: auto;">
+                    <center> <img src="/images/logo2.png" alt="Logo" style="width: 100px;height: auto;"></center>
                 </div>
-                <ul class="nav navbar-nav navbar-right">
-                    <!-- 6 -->
-                    <li id="about"><a href="/about" style="color:#000;margin-top: 2rem;">ABOUT US</a></li>
-                </ul>
             </div>
         </nav>
 
